fixbug: Response api error format
